feat: add stats for top advertiser and talkers
closes #75
closes #74
